<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_lock_black"
        android:layout_gravity="center"
        android:layout_width="90dp"
        android:layout_height="90dp"/>

    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:text="@string/forgotpass"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textColor="@color/lightblack"
        android:text="@string/text1"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/resetEmail"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/lightblack"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/ic_baseline_email_black"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSend"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:background="@color/blue"
        android:layout_marginTop="40dp"
        android:text="@string/resetpass"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"/>
</LinearLayout>